Reducing widths to fix wrapping issues with very long usernames

--- a/app/styles/_navbar-alt.less
+++ b/app/styles/_navbar-alt.less
@@ -140,10 +140,10 @@
       max-width: 100px;
       padding: 0 4px;
       @media (min-width: @screen-md-min) {
-        max-width: 150px;
+        max-width: 130px;
       }
       @media (min-width: @screen-lg-min) {
-        max-width: 200px;
+        max-width: 150px;
       }
       @media (min-width: @screen-xlg-min) {
         max-width: 250px;
